--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/paristuzun-profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/paristuzun.html">Paris Tuzun</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Student at Flatiron School</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>"We'll either find a way, or make one."<br>- Hannibal</p>
                 </div>
                 <div class="clear"></div>
               </li>
