--- a/students/paristuzun.html
+++ b/students/paristuzun.html
@@ -150,7 +150,8 @@
                 <div class="services-title"><h3>Education</h3></div>
                 <div class="clear"></div>
                 <ul>
-                  <li>New York Institute of Technology</li>
+                  <li>New York Institute of Technology - Architectural Technology</li>
+                  <li>Flatiron School - Full Stack Web Development</li>
 
                 </ul>
               </div>
