--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                       <a href="students/student_name.html">Ed Ezekiel</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"Life is like a quote -- sometimes you
+                     just make it up as you go."</p>
                 </div>
                 <div class="clear"></div>
 
