--- a/students/ed_ezekiel.html
+++ b/students/ed_ezekiel.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Ed Ezekiel</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -138,8 +138,9 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Hi everyone! I grew in Maryland just outside of Washington D.C. I moved to Atlanta in 2012
-                  to attend Emory law school. I can’t wait to take the next step with Flatiron.
+                  My passion for coding began when I was at the legal tech company. Since then I haven't been able to shake the
+                  coding bug! When I'm not at a computer, I'm probably cheering on Atlanta United with my wife, Farley Ezekiel,
+                  or playing with my dogs Buddy and Grace.
                 </p>
               </div>
             </div>
@@ -160,10 +161,13 @@
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
                 <h4>
-                  <br Smith, Gambrell, & Russell, LLP
+                  UnitedLex
                 </h4>
                 <p>
-                  Blurb about company...
+                  Since graduating from law school, I worked at a legal tech company,
+                  and then at a medium-sized firm as an environmental attorney. I learned
+                  a bit of SQL and Excel VBA at the legal tech company and I caught the coding bug.
+                  I can’t wait to take the next step with Flatiron.
                 </p>
               </div>
             </div>
@@ -179,7 +183,7 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="column fourth">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
+                  <a href="https://github.com/edezekiel" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
                 <div class="column fourth">
