add excerpt to index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Hi Everyone! Since graduating from college in
+                    2014 I have lived in Chicago, New York,
+                     Tampa and now Atlanta. I have lived in Atlanta for just
+                     over a year now and am a fan of anything involving
+                     creative expression and new perspective.</p>
                 </div>
                 <div class="clear"></div>
               </li>
