Blair andys profile

--- a/index.html
+++ b/index.html
@@ -172,23 +172,23 @@
               <!-- Begin Student 4 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/andy.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/andy_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="Andy">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/andy.html">Andrew Jones</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">“Things turn out best for those who make the best of the way things turn out.”</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Howdy. I grew up in Utah along the Wasatch front mountains. Moved to Rexburg Idaho and got a bachelors in exercise physiology while cutting time away to hike in Teton national park. </p>
                 </div>
                 <div class="clear"></div>
               </li>
