updated index excerpt

--- a/index.html
+++ b/index.html
@@ -147,23 +147,26 @@
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/blair.html">
+                    <img width="304" height="304" class="prof-image" src="students/blair_profile.jpeg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/blair.html">Blair Carroll</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"To the world you may be one person, but to one person you may be the world"</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>            Hello, my name is Blair Carroll and I am from Atlanta, Georgia. I am 26 years old and I have many hobbies. I love to read, play guitar, piano, ukulele, and I can even play a little bass.
+                              I'm easily intrigued and love to learn new things including new languages such as French in the more recent months. Coding is a little difficult to me at times, but I really enjoy it.
+                              I'm a people person and I love getting out in nature and exercising. There is a lot more about me, but that can be found out after getting to know me. Cheers
+                            </p>
                 </div>
                 <div class="clear"></div>
               </li>
