updates to ed pages.

--- a/students/ed_ezekiel.html
+++ b/students/ed_ezekiel.html
@@ -281,8 +281,8 @@
                   <div class="clear"></div>
                   <p>
                     - Favorite Website: <a href="https://iwastesomuchtime.com/">IWasteSoMuchTime</a><br>
-                    - Favorite Comic: <a href="https://medium.com/">Medium</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Comic: <a href="#">Marvel</a><br>
+                    - Favorite Radio Program: <a href="#">Spotify</a><br>
                   </p>
                 </div>
               </div>
