--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>My passion for coding began when I was at the legal tech company.
+                    Since then I haven't been able to shake the coding bug! When I'm not
+                    at a computer, I'm probably cheering on Atlanta United with my wife,
+                    Farley Ezekiel, or playing with my dogs Buddy and Grace.</p>
                 </div>
                 <div class="clear"></div>
               </li>
