--- a/students/andy.html
+++ b/students/andy.html
@@ -158,9 +158,8 @@
               <div class="services">
                 <div class="services-title"><h3>Work</h3></div>
                 <div class="clear"></div>
-                <h4>Some Company</h4>
                 <p>
-                  Blurb about company...
+                  Coming Soon..
                 </p>
               </div>
             </div>
@@ -226,7 +225,6 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="#">Personal Blog</a><br>
                       - <a href="#">Tumblr</a><br>
                     </p>
                   </div>
@@ -273,9 +271,9 @@
                   </div>
                   <div class="clear"></div>
                   <p>
-                    - Favorite Website: <a href="#">Site 1</a><br>
-                    - Favorite Comic: DC <a href="#">Site 2</a><br>
-                    - Favorite Radio Program: <a href="#">Site 3</a><br>
+                    - Favorite Website: <a href="http://www.espn.com/">espn.com</a><br>
+                    - Favorite Comic: <a href="https://www.dccomics.com/">DC</a><br>
+                    - Favorite Food: <a href="#">Pineapple</a><br>
                   </p>
                 </div>
               </div>
